fix(button): center text in fluid & vertically aligned button group

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -1335,6 +1335,7 @@
 .ui.fluid.vertical.buttons > .button {
   display: flex;
   width: auto;
+  justify-content: center;
 }
 
 .ui.two.vertical.buttons > .button {
